# scripts

./: cal.py  icalfullcalendar.sh  icalmarkdown.sh  pyproject.toml
scripts/: cal.py
tests/: test_cal.py
tests/test_cal/actual/: 2022-01-03 Existing Test Event.md
tests/test_cal/expects/: 2022-01-01 Test Event.md  2022-01-02 All Day Test Event.md  2022-01-03 Existing Test Event.md
